test/visibility/private/classes/privateField.good
privateField.chpl:10: error: Cannot access 'foo', 'foo' is private to 'c'
